--- a/HackerRank-Python.ipynb
+++ b/HackerRank-Python.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Dashboard  Python  Introduction  Python If-Else**\n",
     "\n",
@@ -19,7 +22,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -38,7 +43,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -57,7 +64,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -69,7 +78,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -89,7 +100,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -107,7 +120,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Dashboard  Python  Introduction  Arithmetic Operators**\n",
     "\n",
@@ -123,7 +139,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -135,7 +153,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -156,7 +176,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Dashboard  Python  Introduction  Python: Division\n",
     "\n",
@@ -170,7 +193,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -182,7 +207,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -198,6 +225,17 @@
     "print(a//b)\n",
     "print(a/b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
