--- a/HackerRank-Python.ipynb
+++ b/HackerRank-Python.ipynb
@@ -227,24 +227,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "**Dashboard  Python  Introduction  Loops**<br>\n",
+    "Task \n",
+    "Read an integer . For all non-negative integers , print . See the sample for details.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "less_than_ints = [i for i in range(n)]\n",
+    "less_than_ints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in less_than_ints:\n",
+    "    print(i*i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dashboard  Python  Introduction  Write a function**<br>\n"
+   ]
   }
  ],
  "metadata": {
